examples/good/02-03-literals.see
void main() {
    string s = "Hello ";
    string z = "Mum", x = "Not used";
    x = s + z; // x = "Hello Mum"

    return;
}